KH-349 Lombok & KoodiMetadataDto